Correción de errores gramaticales

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -32,9 +32,9 @@
           <select name="educacionMadre" id="educacionMadre">
             <option value="Primaria">Primaria</option>
             <option value="Secundaria">Secundaria</option>
-            <option value="Técnica o Tecnológica">Técnica o Tecnológica</option>
+            <option value="Técnica o tecnológica">Técnica o Tecnológica</option>
             <option value="Universitario">Universitario</option>
-            <option value="No aplica">No aplica</option>
+            <option value="No Aplica">No aplica</option>
           </select>
         </section>
 
@@ -43,9 +43,9 @@
           <select name="educacionPadre" id="educacionPadre">
             <option value="Primaria">Primaria</option>
             <option value="Secundaria">Secundaria</option>
-            <option value="Técnica o Tecnológica">Técnica o Tecnológica</option>
+            <option value="Técnica o tecnológica">Técnica o Tecnológica</option>
             <option value="Universitario">Universitario</option>
-            <option value="No aplica">No aplica</option>
+            <option value="No Aplica">No aplica</option>
           </select>
         </section>
 
