--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -19,7 +19,7 @@
             <option value="MAÑANA">Mañana</option>
             <option value="TARDE">Tarde</option>
             <option value="NOCHE">Noche</option>
-            <option value="SABATICA">Sabática</option>
+            <option value="SABATINA">Sabatina</option>
             <option value="UNICA">Única</option>
           </select>
         </section>
