--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Formulario de evaluación educativa</title>
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"> -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
   </head>
   <body>
     <header>
